# Akasha

./: .gitignore  .pre-commit-config.yaml  README.md
.github/workflows/: ci.yml
akasha-core/: .env.example  pyproject.toml
akasha-core/akasha/: ask.py  cli.py  config.py  embeddings.py  indexer.py  ingest.py  jobs.py  main.py  models.py  store.py  watcher.py
akasha-core/tests/: test_api.py  test_indexer.py
docs/: STRUCTURE.md  architecture.md  roadmap.md  setup.md  validation-notes.md
extensions/raycast-akasha/: package-lock.json  package.json  raycast-env.d.ts  tsconfig.json
extensions/raycast-akasha/src/: api.ts  ask.tsx  ingest.tsx  search.tsx
scripts/raycast/: akasha-open.py  akasha-search.py
vault/akasha/.obsidian/: community-plugins.json  graph.json  workspace.json
vault/akasha/.obsidian/plugins/smart-connections/: data.json
vault/akasha/.smart-env/: smart_env.json
vault/akasha/.smart-env/embedding_models/: embedding_models.ajson
vault/akasha/.smart-env/event_logs/: event_logs.ajson
vault/akasha/.smart-env/multi/: 2026_ABCA_2026_ABCA_Clinic_Agenda_md.ajson  2026_ABCA_Building_a_Championship_Program_1_md.ajson  2026_ABCA_Building_a_Championship_Program_md.ajson  2026_ABCA_Clinic_Agenda_md.ajson  2026_ABCA_GTO_Meets_Exploitative_Pitching_md.ajson  2026_ABCA_The_Swing_Works,_Your_Eyes_Don't!_md.ajson  2026_ABCA_Welcome,_Awards_Presentation_md.ajson  Jay_Johnson_md.ajson  People_Jay_Johnson_md.ajson  People_Robert_Woodard_md.ajson  People_Tony_Abbatine_md.ajson  Robert_Woodard_md.ajson  Welcome,_Awards_Presentation_md.ajson  Welcome_md.ajson
vault/akasha/2026 ABCA/: 2026 ABCA Clinic Agenda.md  Building a Championship Program.md  GTO Meets Exploitative Pitching.md  The Swing Works, Your Eyes Don't!.md  Welcome, Awards Presentation.md
vault/akasha/People/: Jay Johnson.md  Robert Woodard.md  Tony Abbatine.md
